# openhqm

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  COMPOSABLE_PATTERNS.md  CONTRIBUTING.md  DEPLOYMENT_PATTERNS.md  DIAGRAMS.md  DOCKER_IMAGES.md  Dockerfile  FEATURE_SUMMARY.md  KUBERNETES_SIDECAR.md  Makefile  PROJECT_SUMMARY.md  PROXY_MODE.md  QUEUE_BACKENDS.md  QUEUE_INFRASTRUCTURE_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SDD.md  SIDECAR_REVOLUTION.md  TESTING_PROXY.md  config.example.yaml  config.queue-examples.yaml  coverage.json  docker-compose.proxy.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-queue-all.txt  requirements-queue-azure.txt  requirements-queue-gcp.txt  requirements-queue-kafka.txt  requirements-queue-mqtt.txt  requirements-queue-redis.txt  requirements-queue-sqs.txt  requirements.txt
.gemini/: gemini-instructions.md  styleguide.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  BUILD_TEST_RESULTS.md  COMPOSABLE_PATTERNS.md  DEPLOYMENT.md  DEPLOYMENT_PATTERNS.md  INTEGRATION.md  KUBERNETES_SIDECAR.md  MULTI_ARCH_BUILD.md  MULTI_ARCH_SUMMARY.md  PROXY_MODE.md  PROXY_SUMMARY.md  QUEUE_BACKENDS.md  QUICK_REFERENCE.md  README.md  ROUTING_PARTITIONING.md  SEMANTIC_RELEASE.md  SETUP_SEMANTIC_RELEASE.md  SIDECAR_REVOLUTION.md
examples/: README.md  complete_workflow_example.py  k8s-routing-configmap.yaml  proxy_example.py  routing-config.yaml  validate_routing_config.py
examples/configmaps/: README.md  microservices-routes.yaml  production-routes.yaml  starter-routes.yaml
examples/kubernetes/: README.md  gateway.yaml  http-to-queue.yaml  queue-to-http.yaml
scripts/: README.md  build-multiarch.sh  install-hooks.sh  run-ci-checks.sh  setup-dev.sh
src/openhqm/: __init__.py  __main__.py  exceptions.py
src/openhqm/api/: __init__.py  app.py  dependencies.py  listener.py  models.py  routes.py
src/openhqm/cache/: __init__.py  factory.py  interface.py  redis_cache.py
src/openhqm/config/: __init__.py  settings.py
src/openhqm/partitioning/: __init__.py  manager.py  models.py
src/openhqm/queue/: __init__.py  azure_eventhubs.py  custom.py  factory.py  gcp_pubsub.py  interface.py  mqtt.py  redis_queue.py
src/openhqm/routing/: __init__.py  engine.py  models.py
src/openhqm/utils/: __init__.py  helpers.py  logging.py  metrics.py
src/openhqm/worker/: __init__.py  processor.py  worker.py
tests/: conftest.py  test_partitioning.py  test_routing.py
tests/integration/: test_api.py  test_redis_cache.py  test_redis_queue.py
tests/unit/: test_config.py  test_configuration.py  test_error_handling.py  test_models.py  test_processor.py  test_processor_comprehensive.py  test_proxy_processor.py  test_worker.py
