[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhqm"
version = "0.1.0"
description = "Asynchronous HTTP request processing system using message queues"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenHQM Team", email = "team@openhqm.dev"}
]
keywords = ["async", "http", "queue", "message-queue", "fastapi", "redis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "redis[hiredis]>=5.0.1",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "aiohttp>=3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
]

[project.urls]
Homepage = "https://github.com/yourusername/openhqm"
Documentation = "https://github.com/yourusername/openhqm/docs"
Repository = "https://github.com/yourusername/openhqm"
Issues = "https://github.com/yourusername/openhqm/issues"

[project.scripts]
openhqm-api = "openhqm.api.listener:main"
openhqm-worker = "openhqm.worker.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=openhqm --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["src/openhqm"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*.py" = ["S101"]  # assert usage

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too strict for dynamic code
warn_unused_configs = true
disallow_untyped_defs = false  # Relax for optional queue implementations
disallow_incomplete_defs = false  # Relax for optional queue implementations
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Avoid noise from conditional imports
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "prometheus_client.*",
    "structlog.*",
    "azure.*",
    "google.*",
    "asyncio_mqtt.*",
    "aiokafka.*",
    "boto3.*",
    "aioboto3.*",
]
ignore_missing_imports = true

# Optional queue implementations - less strict
[[tool.mypy.overrides]]
module = [
    "openhqm.queue.mqtt",
    "openhqm.queue.gcp_pubsub",
    "openhqm.queue.azure_eventhubs",
    "openhqm.queue.custom",
    "openhqm.queue.kafka_queue",
    "openhqm.queue.sqs_queue",
    "openhqm.queue.redis_queue",
    "openhqm.queue.factory",
    "openhqm.queue.interface",
    "openhqm.cache.redis_cache",
    "openhqm.worker.processor",
    "openhqm.worker.worker",
    "openhqm.utils.logging",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/openhqm/__init__.py:__version__",
]
branch = "main"
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
remove_dist = false
commit_message = "chore(release): {version}\n\n[skip ci]"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
